@@ -1,3 +1,8 @@
+2006-08-10  Gary Benson  <gbenson@redhat.com>
+
+	* java/security/AccessControlContext.java (<init>):
+	Avoid a duplicated AccessController.getContext() call.
+
 2006-08-09  Mark Wielaard  <mark@klomp.org>
 
 	* NEWS: Add updates for 0.92 release.
